Add export and import data for new version